--- a/resources/assets/sass/layout/_body.scss
+++ b/resources/assets/sass/layout/_body.scss
@@ -24,7 +24,9 @@
 
 // Align with the main content column
 .aligned {
-	margin-left: $left-col;
+	@media all and (min-width: 599px) {
+		margin-left: $left-col;
+	}
 }
 
 .article-body {
